# BioPredict-HealthRiskAnalyzer

./: .gitignore  .replit  README.md  app.py  model.pkl  pyproject.toml  replit.md  train_model.py
attached_assets/: Pasted-Fix-the-Blood-Report-Analysis-feature-in-the-existing-B_1769701651492.txt  Pasted-Fix-the-Blood-Report-Analysis-feature-in-the-existing-B_1769701707443.txt  diabetes_data_1769577133735.csv
instance/: bio.db
static/css/: style.css
templates/: base.html  blood_report.html  dashboard.html  index.html  login.html  register.html
