[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "flask-sqlalchemy>=3.1.1",
    "joblib>=1.5.3",
    "mysql-connector-python>=9.6.0",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "pdfplumber>=0.11.9",
    "pillow>=12.1.0",
    "pytesseract>=0.3.13",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
]
